[gd_scene load_steps=15 format=2]

[ext_resource path="res://Art/Ocean/SeaFG.PNG" type="Texture" id=1]
[ext_resource path="res://Art/Ocean/SeaBG.PNG" type="Texture" id=2]
[ext_resource path="res://Art/Ocean/CloudFG.PNG" type="Texture" id=3]
[ext_resource path="res://Art/Ocean/CloudMG.PNG" type="Texture" id=4]
[ext_resource path="res://Art/Ocean/CloudBG.PNG" type="Texture" id=5]
[ext_resource path="res://cool_theme.tres" type="Theme" id=6]
[ext_resource path="res://Art/Boats/Battleship.PNG" type="Texture" id=7]
[ext_resource path="res://Art/Boats/SubSmall.PNG" type="Texture" id=8]
[ext_resource path="res://Negotiation.tscn" type="PackedScene" id=9]
[ext_resource path="res://FightScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Big_UI.tres" type="DynamicFont" id=11]
[ext_resource path="res://Medium_UI.tres" type="DynamicFont" id=12]
[ext_resource path="res://BattleScreen.gd" type="Script" id=13]
[ext_resource path="res://SeaUI.gd" type="Script" id=14]

[node name="Sea" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/Sky"]
margin_left = -1079.0
margin_top = -830.0
margin_right = 1754.0
margin_bottom = 1039.0
color = Color( 0.45098, 0.662745, 0.870588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeaBG" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.01, 1 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sea" type="Sprite" parent="ParallaxBackground/SeaBG"]
position = Vector2( 0, 330 )
texture = ExtResource( 2 )
centered = false

[node name="CloudBG" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.01, 1 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/CloudBG"]
position = Vector2( 0, 108 )
texture = ExtResource( 5 )
centered = false

[node name="CloudMG" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.02, 1 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/CloudMG"]
position = Vector2( 0, 57 )
texture = ExtResource( 4 )
centered = false

[node name="CloudFG" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.03, 1 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Cloud" type="Sprite" parent="ParallaxBackground/CloudFG"]
position = Vector2( 0, -36 )
texture = ExtResource( 3 )
centered = false

[node name="SeaMG2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sea" type="Sprite" parent="ParallaxBackground/SeaMG2"]
modulate = Color( 0.6, 0.603922, 0.682353, 1 )
position = Vector2( 0, 336 )
texture = ExtResource( 1 )
centered = false

[node name="SeaMG" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sea" type="Sprite" parent="ParallaxBackground/SeaMG"]
modulate = Color( 0.780392, 0.784314, 0.85098, 1 )
position = Vector2( 0, 366 )
texture = ExtResource( 1 )
centered = false

[node name="Ships" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 1 )

[node name="Ship" type="Sprite" parent="ParallaxBackground/Ships"]
modulate = Color( 0.597656, 1, 0.97171, 1 )
position = Vector2( 541, 370 )
texture = ExtResource( 7 )

[node name="Sub" type="Sprite" parent="ParallaxBackground/Ships"]
position = Vector2( 398, 451 )
texture = ExtResource( 8 )

[node name="SeaFG" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 1 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sea" type="Sprite" parent="ParallaxBackground/SeaFG"]
position = Vector2( 0, 417 )
texture = ExtResource( 1 )
centered = false

[node name="SeaUI" type="Control" parent="."]
margin_left = 61.0
margin_top = 55.0
margin_right = 966.0
margin_bottom = 540.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Negotiation" parent="SeaUI" instance=ExtResource( 9 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
current_state = 1

[node name="BattleWonScreen" type="VBoxContainer" parent="SeaUI"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SeaUI/BattleWonScreen"]
margin_top = 146.0
margin_right = 905.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 11 )
text = "You won the battle!"
align = 1

[node name="Label2" type="Label" parent="SeaUI/BattleWonScreen"]
margin_top = 232.0
margin_right = 905.0
margin_bottom = 261.0
custom_fonts/font = ExtResource( 12 )
text = "What will you do next?"
align = 1

[node name="Loot" type="Button" parent="SeaUI/BattleWonScreen"]
margin_top = 265.0
margin_right = 905.0
margin_bottom = 300.0
custom_fonts/font = ExtResource( 12 )
text = "Steal the loot and get out"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ransom" type="Button" parent="SeaUI/BattleWonScreen"]
margin_top = 304.0
margin_right = 905.0
margin_bottom = 339.0
custom_fonts/font = ExtResource( 12 )
text = "Demand a ransom from the owner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleScreen" type="VBoxContainer" parent="SeaUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fighters" type="HBoxContainer" parent="SeaUI/BattleScreen"]
margin_right = 905.0
margin_bottom = 312.0
size_flags_vertical = 3

[node name="Player" parent="SeaUI/BattleScreen/Fighters" instance=ExtResource( 10 )]
margin_bottom = 312.0

[node name="Container" type="CenterContainer" parent="SeaUI/BattleScreen/Fighters"]
margin_left = 303.0
margin_right = 602.0
margin_bottom = 312.0
size_flags_horizontal = 3

[node name="Enemy" parent="SeaUI/BattleScreen/Fighters" instance=ExtResource( 10 )]
margin_left = 606.0
margin_right = 905.0
margin_bottom = 312.0
color = Color( 0.0705882, 0.176471, 0.329412, 1 )
is_player = false

[node name="Buttons" type="VBoxContainer" parent="SeaUI/BattleScreen"]
margin_top = 316.0
margin_right = 905.0
margin_bottom = 485.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
alignment = 1

[node name="Info" type="HBoxContainer" parent="SeaUI/BattleScreen/Buttons"]
margin_right = 905.0
margin_bottom = 82.0
theme = ExtResource( 6 )

[node name="Player" type="Label" parent="SeaUI/BattleScreen/Buttons/Info"]
margin_left = 407.0
margin_right = 432.0
margin_bottom = 82.0
size_flags_horizontal = 10
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.729412, 0.643137, 0.129412, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
text = "5"
align = 2

[node name="VS" type="Label" parent="SeaUI/BattleScreen/Buttons/Info"]
margin_left = 436.0
margin_right = 469.0
margin_bottom = 82.0
size_flags_horizontal = 5
size_flags_vertical = 1
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 12 )
text = "VS"
align = 1
valign = 1

[node name="Enemy" type="Label" parent="SeaUI/BattleScreen/Buttons/Info"]
margin_left = 473.0
margin_right = 498.0
margin_bottom = 82.0
size_flags_horizontal = 2
custom_colors/font_color = Color( 0.0705882, 0.176471, 0.329412, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 11 )
text = "5"

[node name="FightButton" type="Button" parent="SeaUI/BattleScreen/Buttons"]
margin_top = 86.0
margin_right = 905.0
margin_bottom = 111.0
text = "Fight"

[node name="NegotiateButton" type="Button" parent="SeaUI/BattleScreen/Buttons"]
margin_top = 115.0
margin_right = 905.0
margin_bottom = 140.0
text = "Negotiate"

[node name="LeaveButton" type="Button" parent="SeaUI/BattleScreen/Buttons"]
margin_top = 144.0
margin_right = 905.0
margin_bottom = 169.0
text = "Leave"

[connection signal="go_back" from="SeaUI/Negotiation" to="SeaUI" method="_on_Negotiation_go_back"]
[connection signal="pressed" from="SeaUI/BattleWonScreen/Loot" to="SeaUI" method="_on_Loot_pressed"]
[connection signal="pressed" from="SeaUI/BattleWonScreen/Ransom" to="SeaUI" method="_on_Ransom_pressed"]
[connection signal="battle_won" from="SeaUI/BattleScreen" to="SeaUI" method="_on_BattleScreen_battle_won"]
[connection signal="pressed" from="SeaUI/BattleScreen/Buttons/FightButton" to="SeaUI/BattleScreen" method="_on_FightButton_pressed"]
[connection signal="pressed" from="SeaUI/BattleScreen/Buttons/NegotiateButton" to="SeaUI" method="_on_NegotiateButton_pressed"]
